--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section>
         <h2>Our Team</h2>
-        <table>
+        <table border="1">
             <tr>
                 <td>Ali</td>
                 <td>Clerk</td>
@@ -37,8 +37,9 @@
     </section>
 
     <footer>
-        <p>All Pakistan Truck Traile And Container Services</p>
+        <p>All Pakistan Truck Trailers And Container Services</p>
     </footer>
 </body>
 </html>
+
 
