--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,9 @@
     </section>
 
     <footer>
-        <p>All Pakistan Truck Traile And Container Services</p>
+        <p>All Pakistan Truck Trailers And Container Services</p>
     </footer>
 </body>
 </html>
+
 
